--- a/bluebook_for_bulldozers/the_Blue_Book_Bulldozers_bynirvana43p.ipynb
+++ b/bluebook_for_bulldozers/the_Blue_Book_Bulldozers_bynirvana43p.ipynb
@@ -20,7 +20,7 @@
     "The whole information is founded in: https://www.kaggle.com/c/bluebook-for-bulldozers\n",
     "\n",
     "This work  is a replication and modification from the chapter 9 of the book \"deep learning for coders with fastai and pytorch\" (without using fastai library). \n",
-    "The dataset we will use is TrainAndValid.csv that would be will be in data folder\n",
+    "The dataset we will use is TrainAndValid.csv that would be in data folder\n",
     "\n",
     "@author: Jorge Ivan Avalos Lopez\n",
     "- python: 3.8.3\n",
