[FIX] typos files

--- a/bluebook_for_bulldozers/the_Blue_Book_Bulldozers_bynirvana43p.ipynb
+++ b/bluebook_for_bulldozers/the_Blue_Book_Bulldozers_bynirvana43p.ipynb
@@ -694,11 +694,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Definition of root mean squered log error\n",
+    "\"\"\" Definition of root mean squared log error\n",
     "        \n",
     "        Args:\n",
     "            model (sklearn Object) : Model trained\n",
