Update Files reformatting

--- a/bluebook_for_bulldozers/the_Blue_Book_Bulldozers_bynirvana43p.ipynb
+++ b/bluebook_for_bulldozers/the_Blue_Book_Bulldozers_bynirvana43p.ipynb
@@ -47,10 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Function to split the time object in pandas\n",
-    "        Args: \n",
-    "            df (DataFrame) : DataFrame\n",
-    "            column : Column to split\n",
+    "\"\"\"Function to split the time object in pandas\n",
+    "Args:\n",
+    "    df (DataFrame) : DataFrame\n",
+    "    column : Column to split\n",
     "\"\"\"\n",
     "\n",
     "\n",
@@ -76,9 +76,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Function to fill missing data in pandas\n",
-    "        Args: \n",
-    "            df (DataFrame) : DataFrame\n",
+    "\"\"\"Function to fill missing data in pandas\n",
+    "Args:\n",
+    "    df (DataFrame) : DataFrame\n",
     "\"\"\"\n",
     "\n",
     "\n",
@@ -590,11 +590,12 @@
     }
    ],
    "source": [
-    "\"\"\" the documentation says: \n",
+    "\"\"\"the documentation says:\n",
     "            - ProductSize: The size class grouping for a product group. Subsets within product group.\n",
     "            - UsageBand: value (low, medium, high) calculated comparing this particular Machine-Sale hours to average usage\n",
     "\n",
-    "Both columns can have comparison in theirs values, for instance high is bigger than medium and medium is bigger than low.\"\"\"\n",
+    "Both columns can have comparison in theirs values, for instance high is bigger than medium and medium is bigger than low.\n",
+    "\"\"\"\n",
     "\n",
     "# Check unique values of the productSize and UsageBand columns\n",
     "print(df[\"ProductSize\"].unique())\n",
@@ -698,12 +699,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Definition of root mean squared log error\n",
-    "        \n",
-    "        Args:\n",
-    "            model (sklearn Object) : Model trained\n",
-    "            x_data : (Pandas DataFrame) : independent data\n",
-    "            y_data : (Pandas DataFrame) : Dependent data\n",
+    "\"\"\"Definition of root mean squared log error\n",
+    "\n",
+    "Args:\n",
+    "    model (sklearn Object) : Model trained\n",
+    "    x_data : (Pandas DataFrame) : independent data\n",
+    "    y_data : (Pandas DataFrame) : Dependent data\n",
     "\"\"\"\n",
     "\n",
     "\n",
